Thu Oct 27 01:36:00 BST 2011  John-Mark Bell  <jmb@netsurf-browser.org>

	* sys/_syslib.s: Prevent stack extension trampling the signal handler 
	stack chunk. This is achieved by inserting an 8 byte gap between the 
	signal handler stack and the initial stack chunk which is then used 
	by the stack allocator for its heap metadata.
	* sys/stackalloc.c (__stackalloc_init): Reflect above change, and
	ensure that the signal handler block size/startofcon fields are
	initialised to sane values such that the block is left alone when
	stack extension takes place. The initial location of dummytopblock
	is now above the signal handler stack.
	* test/sys/stackextension.c: Test for above issue.

Wed Oct 26 00:59:24 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* gen-auto.pl: Remove.

Mon Sep 26 00:41:39 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* time/stdtime.c (SWI_Territory_ConvertDateAndTime): Add missing
	buffer specification.  Bug #223.

Thu Sep  8 00:10:25 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* unix/unix.c (find_terminator): Remove.
	(check_io_redir): Support for double quoated redirection filenames.
	(get_io_redir): Simplify calls to check_io_redir.
	Bug #221.

Wed Sep  7 00:08:02 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* stdio/fread.c (fread): Set EOF when last byte is read.
	Fix returned number of objects read when there is a partial one read.

Sat Aug 27 20:34:12 2011  Lee Noar <leenoar@sky.com>

	* unix/getcwd.c(getcwd): Only free ro_path if it was
	allocated with malloc in the first place.

Sat Jul  2 15:14:30 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* include/glob.h: Copy from FreeBSD 8.0.0 with a couple of
	UnixLib changes.  Solves bug #220.
	* unix/glob.c: Likewise.

Sun May 29 17:21:43 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* unix/dev.c (__fsopen): Return ENOENT iso EAGAIN when unexisting
	file is opened without O_CREAT set.

Wed Apr  6 03:27:25 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
