@@ -1435,30 +1435,25 @@ libm_la_LDFLAGS = -Wc,-nostdlib -version-info 1:0:0
 toolexeclib_LTLIBRARIES = libunixlib.la libm.la
 
 if UNIXLIB_CHUNKED_STACK
+EXTRA_STACK_CFLAGS=-mno-apcs-stack-check
+else
+EXTRA_STACK_CFLAGS=
+endif
+
 # These rules are copied direct from a generated Makefile.
 # The only difference is that stack checking is turned off for these targets.
 # Automake doesn't seem to provide a per-object file flag setting function.
 brk.lo: sys/brk.c
-	if $(LTCOMPILE) -Wc,-mno-apcs-stack-check \
-	-MT brk.lo -MD -MP -MF "$(DEPDIR)/brk.Tpo" -c -o brk.lo \
-	`test -f 'sys/brk.c' || echo '$(srcdir)/'`sys/brk.c; \
-	then mv -f "$(DEPDIR)/brk.Tpo" "$(DEPDIR)/brk.Plo"; \
-	else rm -f "$(DEPDIR)/brk.Tpo"; exit 1; fi
+	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) $(EXTRA_STACK_CFLAGS) -MT brk.lo -MD -MP -MF "$(DEPDIR)/brk.Tpo" -c -o brk.lo `test -f 'sys/brk.c' || echo '$(srcdir)/'`sys/brk.c; \
+	then mv -f "$(DEPDIR)/brk.Tpo" "$(DEPDIR)/brk.Plo"; else rm -f "$(DEPDIR)/brk.Tpo"; exit 1; fi
 
 stackalloc.lo: sys/stackalloc.c
-	if $(LTCOMPILE) -Wc,-mno-apcs-stack-check \
-	-MT stackalloc.lo -MD -MP -MF "$(DEPDIR)/stackalloc.Tpo" -c -o stackalloc.lo \
-	`test -f 'sys/stackalloc.c' || echo '$(srcdir)/'`sys/stackalloc.c; \
-	then mv -f "$(DEPDIR)/stackalloc.Tpo" "$(DEPDIR)/stackalloc.Plo"; \
-	else rm -f "$(DEPDIR)/stackalloc.Tpo"; exit 1; fi
+	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) $(EXTRA_STACK_CFLAGS) -MT stackalloc.lo -MD -MP -MF "$(DEPDIR)/stackalloc.Tpo" -c -o stackalloc.lo `test -f 'sys/stackalloc.c' || echo '$(srcdir)/'`sys/stackalloc.c; \
+	then mv -f "$(DEPDIR)/stackalloc.Tpo" "$(DEPDIR)/stackalloc.Plo"; else rm -f "$(DEPDIR)/stackalloc.Tpo"; exit 1; fi
 
 dvsprintf.lo: debug/dvsprintf.c
-	if $(LTCOMPILE) -Wc,-mno-apcs-stack-check \
-	-MT dvsprintf.lo -MD -MP -MF "$(DEPDIR)/dvsprintf.Tpo" -c -o dvsprintf.lo \
-	`test -f 'debug/dvsprintf.c' || echo '$(srcdir)/'`debug/dvsprintf.c; \
-	then mv -f "$(DEPDIR)/dvsprintf.Tpo" "$(DEPDIR)/dvsprintf.Plo"; \
-	else rm -f "$(DEPDIR)/dvsprintf.Tpo"; exit 1; fi
-endif
+	if $(LIBTOOL) --tag=CC --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) $(EXTRA_STACK_CFLAGS) -MT dvsprintf.lo -MD -MP -MF "$(DEPDIR)/dvsprintf.Tpo" -c -o dvsprintf.lo `test -f 'debug/dvsprintf.c' || echo '$(srcdir)/'`debug/dvsprintf.c; \
+	then mv -f "$(DEPDIR)/dvsprintf.Tpo" "$(DEPDIR)/dvsprintf.Plo"; else rm -f "$(DEPDIR)/dvsprintf.Tpo"; exit 1; fi
 
 # crt ----------------------
 
